--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
     "dotenv": "^10.0.0",
     "formik": "^2.2.9",
     "js-cookie": "^3.0.1",
-    "node-sass": "4.14.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
+    "sass": "^1.54.9",
     "web-vitals": "^1.0.1",
     "yup": "^0.32.11"
   },
